# sw-cor24-x-assembler

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  README.md
.agentrail/: plan.md  saga.toml
.agentrail-archive/cor24-asm-base-addr-20260508T082627/: archive-reason.txt  saga.toml
.agentrail-archive/cor24-asm-cli-20260507T184625/: archive-reason.txt  saga.toml
.agentrail-archive/depend-on-isa-not-emulator-20260509T124133/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/docs-sync-agentrail-readme-20260418T203426/: archive-reason.txt  saga.toml
.agentrail-archive/fix-clippy-collapsible-match-assembler-20260422T133634/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/fix-i2c-ssd1306-rtc-clock-read-20260518T071535/: archive-reason.txt  plan.md
.agentrail-archive/i2c-ds1307-read-20260516T151245/: archive-reason.txt
.agentrail-archive/i2c-ds1307-set-20260517T081854/: archive-reason.txt  saga.toml
.agentrail-archive/i2c-examples-20260516T141431/: archive-reason.txt  plan.md  saga.toml
.agentrail-archive/i2c-ssd1306-demos-20260517T144215/: archive-reason.txt  plan.md
.agentrail-archive/lgo-compact-flag-20260515T180822/: archive-reason.txt  saga.toml
.agentrail-archive/makerlisp-button-echo-20260515T191212/: archive-reason.txt
.agentrail-archive/zero-fill-directive-20260510T105009/: archive-reason.txt  plan.md  saga.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
cli/tests/fixtures/: simple.s  with_la.s
scripts/: build.sh
src/: assembler.rs  lgo.rs  lib.rs  listing.rs
tests/: integration_tests.rs
(+114 files in other folders)
