[workspace]
members = [".", "cli"]
resolver = "2"

[package]
name = "cor24-assembler"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "COR24 C-Oriented RISC 24-bit Assembler"

[lib]
crate-type = ["rlib"]

[dependencies]
cor24-isa = { path = "../sw-cor24-isa" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
cor24-emulator = { path = "../sw-cor24-emulator" }

[profile.release]
opt-level = "z"
lto = true
